tests/NormalTests/paczka1/fuzzy1/26551237.err
Error in line 11: OroGoeq6nO S538 69,3
Error in line 13: nPkR7 S448 75,9
Error in line 12: OroGoeq6nO A218 69,0
Error in line 18: OroGoeq6nO S538 28,4
Error in line 22: MdgiGMJC6G S448 58,6
